[package]
name = "switchboard-solana"
version = "0.27.8"
edition = "2021"
description = "A Rust library to interact with Switchboard accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_solana"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-spl = "0.27.0"
solana-program = "=1.14.16"
solana-address-lookup-table-program = "=1.14.16"
rust_decimal = "^1"
bytemuck = "^1"
superslice = "1"

switchboard-common = { version = "0.8.7", path = "../switchboard-common" }
anchor-lang = { version = "0.27.0" }


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
